--- a/Reciplease/View/Storyboard/DishesTableViewCell.xib
+++ b/Reciplease/View/Storyboard/DishesTableViewCell.xib
@@ -10,26 +10,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="221" id="KGk-i7-Jjw" customClass="DishesTableViewCell" customModule="Reciplease" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="521" height="221"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="238" id="KGk-i7-Jjw" customClass="DishesTableViewCell" customModule="Reciplease" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="521" height="238"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="521" height="221"/>
+                <rect key="frame" x="0.0" y="0.0" width="521" height="238"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Khe-9V-qQX">
-                        <rect key="frame" x="1" y="1" width="519" height="219"/>
+                        <rect key="frame" x="1" y="1" width="519" height="236"/>
                     </imageView>
                     <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happy Tuna" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odk-R1-ca6">
-                        <rect key="frame" x="20" y="160" width="481" height="20.5"/>
-                        <color key="backgroundColor" red="0.2713810196" green="0.2713810196" blue="0.2713810196" alpha="0.40480522260273971" colorSpace="custom" customColorSpace="displayP3"/>
+                        <rect key="frame" x="20" y="177" width="481" height="20.5"/>
+                        <color key="backgroundColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="0.4043771404109589" colorSpace="custom" customColorSpace="displayP3"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oignons, salad, tuna" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQ1-U6-h9t">
-                        <rect key="frame" x="20" y="190.5" width="481" height="20.5"/>
-                        <color key="backgroundColor" red="0.2713810196" green="0.2713810196" blue="0.2713810196" alpha="0.40357448630136988" colorSpace="custom" customColorSpace="displayP3"/>
+                        <rect key="frame" x="20" y="207.5" width="481" height="20.5"/>
+                        <color key="backgroundColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="0.40210295376712329" colorSpace="custom" customColorSpace="displayP3"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -41,9 +41,9 @@
                             <constraint firstAttribute="width" constant="29" id="Uw8-8j-tP3"/>
                         </constraints>
                     </imageView>
-                    <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.5k" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDY-zu-NVt">
+                    <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDY-zu-NVt">
                         <rect key="frame" x="441" y="10" width="38" height="30"/>
-                        <color key="backgroundColor" red="0.2713810196" green="0.2713810196" blue="0.2713810196" alpha="0.40365475171232879" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="0.4005779109589041" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="38" id="1A5-0n-zxJ"/>
@@ -63,7 +63,7 @@
                     </imageView>
                     <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="120mn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKX-BD-8ya">
                         <rect key="frame" x="424" y="48" width="55" height="30"/>
-                        <color key="backgroundColor" red="0.2713810196" green="0.2713810196" blue="0.2713810196" alpha="0.39718000856164382" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="0.40079195205479451" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="sTs-EC-qTm"/>
                             <constraint firstAttribute="width" constant="55" id="v3i-yy-sVx"/>
@@ -102,7 +102,7 @@
                 <outlet property="personsSlices" destination="cDY-zu-NVt" id="NP7-kB-ivi"/>
                 <outlet property="timeCookLabel" destination="BKX-BD-8ya" id="bbL-cw-V4p"/>
             </connections>
-            <point key="canvasLocation" x="200.72463768115944" y="90.066964285714278"/>
+            <point key="canvasLocation" x="200.72463768115944" y="109.82142857142857"/>
         </tableViewCell>
     </objects>
     <resources>
