--- a/Reciplease/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Reciplease/View/Storyboard/Base.lproj/Main.storyboard
@@ -307,7 +307,7 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="9do-UQ-xd3">
                             <color key="tintColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="heart.fill" catalog="system" id="DCu-BJ-fuB">
+                        <barButtonItem key="rightBarButtonItem" tag="1" title="Item" image="heart.fill" catalog="system" id="DCu-BJ-fuB">
                             <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="favButtonTapped:" destination="D0N-l2-Ivx" id="x5Y-9w-0da"/>
@@ -315,6 +315,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="favItemButton" destination="DCu-BJ-fuB" id="mqt-e7-fk7"/>
                         <outlet property="recipeImageView" destination="J0z-LH-k1E" id="4RZ-Vj-2Ab"/>
                         <outlet property="recipeIngredientsTableView" destination="S2s-z0-ooy" id="efZ-A6-PHg"/>
                         <outlet property="recipeLabel" destination="wgL-WO-xJk" id="iHu-YU-klA"/>
@@ -324,7 +325,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kzf-18-B4d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3731.884057971015" y="-145.3125"/>
+            <point key="canvasLocation" x="3493" y="-145"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Je1-LC-8S8">
